...
            android:id="@+id/allLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_grey_400"
                android:minHeight="80dp"
                android:padding="18dp" />

...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/navigation_bottom"
                    android:layout_weight="1"
                    android:background="@color/md_grey_200"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
